fixed modal on mobile view

--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,9 @@ a{
 }
 
 body{
-    margin:50px 100px;
+    margin:50px 50px;
     position: relative;
+    height: 100vh;
 }
 
 
@@ -165,7 +166,7 @@ transition: transform 0.4s ease-in-out;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 81vh;
+    height: 100%;
 }
 
 .modal-btn{
@@ -178,8 +179,7 @@ transition: transform 0.4s ease-in-out;
 
 .modal{
     border: 2px solid black;
-    height: 500px;
-    width: 800px;
+    height: 50%;
     top: 50%;
     left: 50%;
     transform: translate(-50% , -50%);
@@ -197,7 +197,7 @@ transition: transform 0.4s ease-in-out;
 }
 
 .modal-content p{
-    margin-top: 30px;
+    margin-top: 50px;
     padding: 15px;
     font-size: 32px;
 }
@@ -226,7 +226,9 @@ transition: transform 0.4s ease-in-out;
     transform: scale(0.98);
 }
 
-@media (min-width: 320px) and (max-width: 767px) {
+
+
+@media (min-width: 320px) and (max-width: 480px) {
 
     body{
         margin: 10px;
@@ -265,6 +267,15 @@ transition: transform 0.4s ease-in-out;
 
     .nav-active + .burger_nav-link-list{
         opacity: 1;
+    }
+
+    .modal{
+        width: 100%;
+        height: 80%;
+    }
+
+    .modal-content p{
+        font-size: 24px;
     }
 
     footer{
